font/starting different sections

--- a/landing.html
+++ b/landing.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html>
+    <link rel="stylesheet" href="landing.css">
 <head>
     <title>Code2Code!</title>
     <meta charset="UTF-8">
     <header></header>
 </head>
 <body>
-<h1>Hello world!</h1>
+<h1>Welcome to Code2Code!</h1>
+<div id="langselect">
+    
+</div>
 </body>
 <script src="homepage.js"></script>
 </html>
