--- a/landing.html
+++ b/landing.html
@@ -7,9 +7,15 @@
     <header></header>
 </head>
 <body>
-<h1>Welcome to Code2Code!</h1>
-<div id="langselect">
-    
+<h1>Welcome to Code2Code, select your main language to get started!</h1>
+<div id="mainlangselect">
+    <section id="selectbuttons">
+        <nav>
+            <button id="Java">Java</button>
+            <button id="C">C/C++</button>
+            <button id="Python">Python</button>
+        </nav>
+    </section>
 </div>
 </body>
 <script src="homepage.js"></script>
