--- a/landing.html
+++ b/landing.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 <h1>Welcome to Code2Code, select your main language to get started!</h1>
+<h2 id="date">placeholder</h2>
 <div id="mainlangselect">
     <section id="selectbuttons">
         <nav>
