base plates for every possible language selection

--- a/landing.html
+++ b/landing.html
@@ -12,9 +12,9 @@
 <div id="mainlangselect">
     <section id="selectbuttons">
         <nav>
-            <button id="Java">Java</button>
-            <button id="C">C/C++</button>
-            <button id="Python">Python</button>
+            <button onclick="confirm('Java')" id="Java">Java</button>
+            <button onclick=" confirm('C/C++')" id="C">C/C++</button>
+            <button onclick="confirm('Python')" id="Python">Python</button>
         </nav>
     </section>
 </div>
