base plate done, content shift to react coming shortly

--- a/landing.html
+++ b/landing.html
@@ -18,6 +18,10 @@
         </nav>
     </section>
 </div>
+<div class="wavy-container">
+  <h2 class="wavy">Let's get programming!</h2>
+</div>
+
 </body>
 <script src="homepage.js"></script>
 </html>
